fix crop type label being truncated on field-add/edit

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -25,7 +25,7 @@ h1 {
 }
 
 ion-select {
-  max-width: 54% !important;
+  max-width: 50% !important;
 }
 
 .alert-ios .alert-radio-label {
